--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "library",
   "version": "1.0.0",
   "description": "",
-  "main": "lib.js",
+  "main": "index.js",
   "directories": {
-    "test": "test"
+    "dev": "doTest"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r @babel/register dev/doTest.js --watch --color"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,22 @@
   "bugs": {
     "url": "https://github.com/LudyBlack/Dkit/issues"
   },
-  "homepage": "https://github.com/LudyBlack/Dkit#readme"
+  "homepage": "https://github.com/LudyBlack/Dkit#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.5",
+    "chai": "^4.2.0",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.3.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^8.0.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
+  }
 }
