--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
                 "@babel/preset-env",
                 {
                     "targets": {
-                        "chrome": "55"
+                        "chrome": "55",
+                        "esmodules": true
                     }
                 }
             ]
-        ]
+        ],
+        "plugins": ["@babel/plugin-transform-arrow-functions"]
     }
 }
