--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-        "lint": "eslint dev/test.js --fix",
-        "test": "mocha -r @babel/register dev/test.js",
-        "test-json": "mocha -r @babel/register dev/test.js --reporter json",
-        "webTest": "node dev/webTest/backend/app.js",
+        "test": "mocha -r @babel/register test.js",
+        "test-json": "mocha -r @babel/register test.js --reporter json",
         "build": "node -r @babel/register build/build.js"
     },
     "devDependencies": {
